Stalker/Stalker_Backend/k8s/stalker-deployment-arm.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "stalker-backend" # Nome del deployment
  namespace: "default"
  labels:
    app: "stalker-backend"
spec:
  replicas: 1 # Numero di pods che andranno ad eseguire l'immagine
  selector:
    matchLabels:
      app: "stalker-backend"
  template:
    metadata:
      labels:
        app: "stalker-backend"
    spec:
      containers:
        - name: "stalker-backend"
          image: "jjocram/stalker-backend:0.2.2-arm" # Repo da dove scaricare l'immagine docker
          ports:
            - containerPort: 5000
