Stalker/Stalker_Backend/k8s/stalker-deployment.yml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "stalker-backend" # Nome del deployment
  namespace: "default"
  labels:
    app: "stalker-backend"
spec:
  replicas: 1 # Numero di pods che andranno ad eseguire l'immagine
  selector:
    matchLabels:
      app: "stalker-backend"
  template:
    metadata:
      labels:
        app: "stalker-backend"
    spec:
      containers:
        - name: "stalker-backend"
          image: "jjocram/stalker-backend:0.5.2" # Repo da dove scaricare l'immagine docker
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 3
            periodSeconds: 3
