Stalker/Stalker_Backend/k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    service: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432 #Porta default di postgres
  selector:
    service: postgres
