Stalker/Stalker_Backend/k8s/rethiknkdb-admin.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"db":"rethinkdb"},"name":"rethinkdb-admin","namespace":"default"},"spec":{"ports":[{"port":8080,"targetPort":"admin"}],"selector":{"db":"rethinkdb","role":"admin"},"type":"LoadBalancer"}}
  creationTimestamp: "2020-03-03T09:59:52Z"
  labels:
    db: rethinkdb
  name: rethinkdb-admin
  namespace: default
  resourceVersion: "6879"
  selfLink: /api/v1/namespaces/default/services/rethinkdb-admin
  uid: ba6005db-5d35-11ea-b698-42010af00255
spec:
  clusterIP: 10.96.8.53
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 32634
    port: 8080
    protocol: TCP
    targetPort: admin
  selector:
    db: rethinkdb
    role: admin
  sessionAffinity: None
  type: LoadBalancer
