Stalker/Stalker_Backend/k8s/rethink-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rethink
  labels:
    service: rethink
spec:
  type: ClusterIP
  ports:
    - port: 28015
      name: rethink-db
    - port: 8080
      name: rethink-dash
  selector:
    service: rethink
