Stalker/Stalker_Backend/k8s/stalker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stalker-backend
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: stalker-backend
spec:
  type: NodePort
  selector:
    app: stalker-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
